<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ebank</string>
    <string name="app_label">NNHL eSupport</string>
    <string name="title_activity_counsellor_login">CounsellorLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="you_are_a_counsellor_string">You are a counsellor</string>
    <string name="you_are_a_client_string">You are a client</string>
    <string name="your_satisfaction_our_honor_string">Your satisfaction Our honor</string>
    <string name="group_ek1_string">Group</string>
    <string name="nnhl_string">NNHL</string>
    <string name="password__string">Password:</string>
    <string name="_____________string">***********</string>
    <string name="username__string">Username:</string>
    <string name="nguyen_van_a_string">Nguyen Van A</string>
    <string name="register_string">Register</string>
    <string name="back_string">Back</string>
    <string name="login_string">Login</string>
    <string name="group_ek3_string">Group</string>
    <string name="nnhl_ek1_string">NNHL</string>
    <string name="welcome_counsellor___string">Welcome counsellor !</string>
    <string name="security_id__string">Security ID:</string>
    <string name="xxx_xxx_xxx_string">xxx-xxx-xxx</string>
    <string name="email__string">Email:</string>
    <string name="employee_nnhl_com_string">employee@nnhl.com</string>
    <string name="telephone__string">Telephone:</string>
    <string name="__84_999_999_999_string">+84-999-999-999</string>
    <string name="password__ek1_string">Password:</string>
    <string name="_____________ek1_string">***********</string>
    <string name="username__ek1_string">Username:</string>
    <string name="nguyen_van_a_ek1_string">Nguyen Van A</string>
    <string name="register_ek1_string">Register</string>
    <string name="group_ek5_string">Group</string>
    <string name="nnhl_ek2_string">NNHL</string>
    <string name="counsellor_name_string">Counsellor Name</string>
    <string name="group_ek8_string">Group</string>
    <string name="nnhl_ek3_string">NNHL</string>
    <string name="client__string">Client:</string>
    <string name="nguyen_van_a_ek2_string">Nguyen Van A</string>
    <string name="topic__string">Topic:</string>
    <string name="request_content_string">Request content</string>
    <string name="call_string">Call</string>
    <string name="log_out_string">Log Out</string>
    <string name="start_string">Start</string>
</resources>