<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		nnhl
	 *	@date 		1621334150672
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/counsellorloginview" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_counsellorloginview_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__counsellorloginview_ek2"
					android:background="@drawable/_bg__counsellorloginview_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />

				<View android:id="@+id/fullbackground_ek1"
					android:background="@drawable/fullbackground_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/halfbackground_ek1"
					android:layout_marginTop="-99dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/rectangle_2_ek1"
						android:src="@drawable/rectangle_2_ek1"
						android:contentDescription="rectangle_2_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="49dp"
						android:layout_width="360dp"
						android:layout_height="416dp" />

					<ImageView android:id="@+id/rectangle_1_ek1"
						android:src="@drawable/rectangle_1_ek1"
						android:contentDescription="rectangle_1_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="121dp"
						android:layout_width="360dp"
						android:layout_height="622dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/passwordinputtext"
					android:layout_below="@id/usernameinputtext"
					android:layout_marginStart="11dp"
					android:layout_marginTop="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/password_"
						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/password__string"
						/>

					<EditText android:id="@+id/passwordLoginEdittext"
						android:background="@drawable/rectangle_3_ek2_shape"
						android:layout_toRightOf="@+id/password_"
						android:layout_marginTop="0dp"
						android:layout_width="238dp"
						android:layout_height="40dp"
						android:hint="***********"
						android:textAlignment="center"/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/usernameinputtext"
					android:layout_marginTop="285dp"
					android:layout_marginStart="11dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/username_"
						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/username__string"
						/>

					<EditText android:id="@+id/usernameLoginEdittext"
						android:background="@drawable/rectangle_3_ek3_shape"
						android:layout_toRightOf="@+id/username_"
						android:layout_marginTop="0dp"
						android:layout_width="238dp"
						android:layout_height="40dp"
						android:hint="@string/nguyen_van_a_string"
						android:textAlignment="center"/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/registerOption"
					android:layout_marginTop="505dp"
					android:layout_marginStart="36dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageButton android:id="@+id/registerInLoginButton"
						android:background="@drawable/rectangle_3_ek4_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="288dp"
						android:layout_height="63dp" />

					<TextView android:id="@+id/register"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="19sp"
						android:textColor="@color/you_are_a_counsellor_color"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/register_string"
						android:layout_centerHorizontal="true"
						android:layout_centerVertical="true"
						android:layout_centerInParent="true"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/backloginbutton"
					android:layout_marginTop="588dp"
					android:layout_marginStart="131dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageButton android:id="@+id/rectangle_3_ek5"
						android:background="@drawable/rectangle_3_ek5_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="100dp"
						android:layout_height="34dp" />

					<TextView android:id="@+id/back"
						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="#0094FF"
						android:layout_centerHorizontal="true"
						android:layout_centerVertical="true"
						android:layout_centerInParent="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/back_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/loginOption"
					android:layout_marginTop="422dp"
					android:layout_marginStart="36dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageButton android:id="@+id/loginButton"
						android:background="@drawable/rectangle_3_ek6_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="288dp"
						android:layout_height="63dp" />

					<TextView android:id="@+id/login"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="19sp"
						android:textColor="@color/you_are_a_counsellor_color"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/login_string"
						android:layout_centerHorizontal="true"
						android:layout_centerVertical="true"
						android:layout_centerInParent="true"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/logo_ek1"
					android:layout_marginTop="11dp"
					android:layout_marginStart="11dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/group_ek3"
android:textSize="19sp"
						android:textColor="@color/your_satisfaction_our_honor_color"
						android:layout_marginLeft="63dp"
						android:layout_marginTop="34dp"
						android:layout_width="82.43dp"
						android:layout_height="45.67dp"
						android:text="@string/group_ek3_string"
						 />

					<TextView android:id="@+id/nnhl_ek1"
android:textSize="26sp"
						android:textColor="@color/your_satisfaction_our_honor_color"
						android:layout_marginLeft="63dp"
						android:layout_marginTop="8dp"
						android:layout_width="86dp"
						android:layout_height="50.17dp"
						android:text="@string/nnhl_ek1_string"
						 />


					<RelativeLayout android:id="@+id/dove_1_ek1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_ek4"
							android:layout_marginTop="8.1dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector_ek4"
								android:src="@drawable/vector_ek4"
								android:contentDescription="vector_ek4"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="59.13dp"
								android:layout_height="51.8dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<TextView android:id="@+id/welcome_counsellor__"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="26sp"
					android:textColor="@color/_bg__startview_ek2_color"
					android:layout_marginLeft="53dp"
					android:layout_marginTop="194dp"
					android:layout_width="290dp"
					android:layout_height="38dp"
					android:text="@string/welcome_counsellor___string"
					 />

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>