<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		nnhl
	 *	@date 		1621334150672
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/counsellorregisterview" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_counsellorregisterview_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__counsellorregisterview_ek2"
					android:background="@drawable/_bg__counsellorregisterview_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />

				<View android:id="@+id/fullbackground_ek2"
					android:background="@drawable/fullbackground_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/halfbackground_ek2"
					android:layout_marginTop="-99dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/rectangle_2_ek2"
						android:src="@drawable/rectangle_2_ek2"
						android:contentDescription="rectangle_2_ek2"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="49dp"
						android:layout_width="360dp"
						android:layout_height="416dp" />

					<ImageView android:id="@+id/rectangle_1_ek2"
						android:src="@drawable/rectangle_1_ek2"
						android:contentDescription="rectangle_1_ek2"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="121dp"
						android:layout_width="360dp"
						android:layout_height="622dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/sidinputtext"
					android:layout_below="@+id/emailinputtext"
					android:layout_marginStart="11dp"
					android:layout_marginTop="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/security_id_"
						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/security_id__string"
						/>

					<EditText android:id="@+id/rectangle_3_ek7"
						android:background="@drawable/rectangle_3_ek7_shape"
						android:layout_toRightOf="@+id/security_id_"
						android:layout_marginTop="0dp"
						android:layout_width="237dp"
						android:layout_height="40dp"
						android:hint="xxx-xxx-xxx"
						android:textAlignment="center"
						/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/emailinputtext"
					android:layout_below="@+id/telephoneinputtext"
					android:layout_marginStart="11dp"
					android:layout_marginTop="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/email_"

						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/email__string"
						/>

					<EditText android:id="@+id/emailEdittext"
						android:background="@drawable/rectangle_3_ek8_shape"
						android:layout_toRightOf="@+id/email_"
						android:layout_marginTop="0dp"
						android:layout_width="238dp"
						android:layout_height="40dp"
						android:hint="employee@hhnl.com"
						android:textAlignment="center"/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/telephoneinputtext"
					android:layout_below="@+id/passwordinputtext_ek1"
					android:layout_marginStart="11dp"
					android:layout_marginTop="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/telephone_"
						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/telephone__string"
						/>

					<EditText android:id="@+id/telephoneEdittext"
						android:background="@drawable/rectangle_3_ek9_shape"
						android:layout_toRightOf="@+id/telephone_"
						android:layout_marginTop="0dp"
						android:layout_width="237dp"
						android:layout_height="40dp"
						android:hint="+84-999-999-999"
						android:textAlignment="center"/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/passwordinputtext_ek1"
					android:layout_below="@+id/usernameinputtext_ek1"
					android:layout_marginStart="11dp"
					android:layout_marginTop="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/password__ek1"

						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/password__ek1_string"
						/>

					<EditText android:id="@+id/passwordRegisterEdittext"
						android:background="@drawable/rectangle_3_ek10_shape"
						android:layout_toRightOf="@+id/password__ek1"
						android:layout_marginTop="0dp"
						android:layout_width="238dp"
						android:layout_height="40dp"
						android:hint="***********"
						android:textAlignment="center"/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/usernameinputtext_ek1"
					android:layout_marginTop="225dp"
					android:layout_marginStart="11dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>
					<TextView android:id="@+id/username__ek1"

						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="@color/fullbackground_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="5dp"
						android:layout_width="100dp"
						android:layout_height="40dp"
						android:text="@string/username__ek1_string"
						/>

					<EditText android:id="@+id/usernameRegisterEdittext"
						android:background="@drawable/rectangle_3_ek11_shape"
						android:layout_toRightOf="@+id/username__ek1"
						android:layout_marginTop="0dp"
						android:layout_width="238dp"
						android:layout_height="40dp"
						android:hint="@string/nguyen_van_a_ek1_string"
						android:textAlignment="center"
						/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/registerPage"
					android:layout_marginTop="505dp"
					android:layout_marginStart="36dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageButton android:id="@+id/registerButton"
						android:background="@drawable/rectangle_3_ek12_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="288dp"
						android:layout_height="63dp"
						/>

					<TextView android:id="@+id/register_ek1"
						android:layout_centerHorizontal="true"
						android:layout_centerVertical="true"
						android:layout_centerInParent="true"
						android:textStyle="bold"
						android:textSize="19sp"
						android:textColor="#0094FF"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/register_ek1_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/logo_ek2"
					android:layout_marginTop="11dp"
					android:layout_marginStart="11dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/group_ek5"
						
						android:textSize="19sp"
						android:textColor="@color/your_satisfaction_our_honor_color"
						android:layout_marginLeft="63dp"
						android:layout_marginTop="34dp"
						android:layout_width="82.43dp"
						android:layout_height="45.67dp"
						android:text="@string/group_ek5_string"
						 />

					<TextView android:id="@+id/nnhl_ek2"
						
						android:textSize="26sp"
						android:textColor="@color/your_satisfaction_our_honor_color"
						android:layout_marginLeft="63dp"
						android:layout_marginTop="8dp"
						android:layout_width="86dp"
						android:layout_height="50.17dp"
						android:text="@string/nnhl_ek2_string"
						 />


					<RelativeLayout android:id="@+id/dove_1_ek2"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_ek6"
							android:layout_marginTop="8.1dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector_ek5"
								android:src="@drawable/vector_ek5"
								android:contentDescription="vector_ek5"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="59.13dp"
								android:layout_height="51.8dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>